[tool.poetry]
name = "magicparse"
version = "1.0.1"
description = "Declarative parser 🛸"
authors = ["Smartway <dev@zero-gachis.com>"]
readme = "README.md"
repository = "https://github.com/ZeroGachis/magicparse"


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
awscli = "~1"
flake8-pyproject = "~1.2.3"
ruff = "^0.13.1"
pre-commit = "^4.3.0"
pyright = {version = "^1.1.405", extras = ["nodejs"]}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E722", # Allow for bare 'except'
]

[tool.pytest.ini_options]
python_files = ["tests/*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
include = ["magicparse/**", "tests/**"]

executionEnvironments = [{ root = "magicparse" }]
